@@ -1,1 +1,1 @@
-.StripeElement{background-color:#fff;height:45px;padding:13px 12px;border-radius:4px;border:1px solid rgba(0,0,0,.3);transition:box-shadow .15s ease}.StripeElement--focus{box-shadow:0 1px 3px 0 #cfd7df}.StripeElement--invalid{border-color:#fa755a}.StripeElement--webkit-autofill{background-color:#fefde5!important}
+.StripeElement{background-color:#fff;height:45px;width:100%;padding:13px 12px;border-radius:4px;border:1px solid rgba(0,0,0,.3);transition:box-shadow .15s ease}.StripeElement--focus{box-shadow:0 1px 3px 0 #cfd7df}.StripeElement--invalid{border-color:#fa755a}.StripeElement--webkit-autofill{background-color:#fefde5!important}
