@@ -1,6 +1,7 @@
 .StripeElement {
   background-color: white;
   height: 45px;
+  width: 100%;
   padding: 13px 12px;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.3);
